fix pixel on small screen

--- a/src/components/TickerDashboard/TickerDashboard.scss
+++ b/src/components/TickerDashboard/TickerDashboard.scss
@@ -73,6 +73,12 @@
     .mb-35{
         margin-bottom: 16px;
     }
+    .h-500{
+        height: 534px;
+    }
+    .scroll-tbody{
+        height: 512px !important;
+    }
 }
 @media (max-width: 1399px) {
     .w-px-150 {
